# jetson-ffmpeg

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ffmpeg_nvmpi.patch  nvmpi.h  nvmpi.pc.in  nvmpi_dec.cpp  nvmpi_enc.cpp
common/: NvBuffer.cpp  NvElement.cpp  NvElementProfiler.cpp  NvLogging.cpp  NvV4l2Element.cpp  NvV4l2ElementPlane.cpp  NvVideoConverter.cpp  NvVideoDecoder.cpp  NvVideoEncoder.cpp
include/: NvBuffer.h  NvElement.h  NvElementProfiler.h  NvLogging.h  NvV4l2Element.h  NvV4l2ElementPlane.h  NvVideoConverter.h  NvVideoDecoder.h  NvVideoEncoder.h  libv4l2.h  nvbuf_utils.h  v4l2_nv_extensions.h
